[chromium] Fix CCThreadProxy::setVisible https://bugs.webkit.org/show_bug.cgi?id=71903

The behavior is different depending on whether we're showing
or hiding the compositor. This patch fixes both code paths.

Patch by Iain Merrick <husky@google.com> on 2011-11-11
Reviewed by James Robinson.

* platform/graphics/chromium/cc/CCCompletionEvent.h:
(WebCore::CCCompletionEvent::CCCompletionEvent):
(WebCore::CCCompletionEvent::~CCCompletionEvent):
(WebCore::CCCompletionEvent::wait):
(WebCore::CCCompletionEvent::signal):
* platform/graphics/chromium/cc/CCThreadProxy.cpp:
(WebCore::CCThreadProxy::setVisible):

Canonical link: https://commits.webkit.org/88612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100055 268f45cc-cd09-0410-ab3c-d52691b4dbfc